# funding-trading-bridge-smart-contract

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: CODEOWNERS  quality_check.yaml  release.yaml
.github/workflows/: quality_check.yaml  release.yaml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/funding_trading_bridge_smart_contract/: all.html  index.html
docs/funding_trading_bridge_smart_contract/contract/: fn.execute.html  fn.instantiate.html  fn.migrate.html  fn.query.html  index.html
docs/funding_trading_bridge_smart_contract/execute/: index.html  sidebar-items.js
docs/funding_trading_bridge_smart_contract/instantiate/: index.html
docs/funding_trading_bridge_smart_contract/migrate/: index.html  sidebar-items.js
docs/funding_trading_bridge_smart_contract/query/: index.html
docs/funding_trading_bridge_smart_contract/store/: index.html
docs/funding_trading_bridge_smart_contract/types/: index.html  sidebar-items.js
docs/funding_trading_bridge_smart_contract/util/: index.html  sidebar-items.js
docs/search.desc/funding_trading_bridge_smart_contract/: funding_trading_bridge_smart_contract-desc-0-.js
docs/src/funding_trading_bridge_smart_contract/: lib.rs.html  (+1 more)
examples/: schema.rs
schema/: contract_state_v1.json  execute_msg.json  instantiate_msg.json  migrate_msg.json  query_msg.json
src/: contract.rs  lib.rs
src/execute/: admin_update_admin.rs  admin_update_deposit_required_attributes.rs  admin_update_withdraw_required_attributes.rs  fund_trading.rs  mod.rs  withdraw_trading.rs
src/instantiate/: instantiate_contract.rs  mod.rs
src/migrate/: migrate_contract.rs  mod.rs
src/query/: mod.rs  query_contract_state.rs
src/store/: contract_state.rs
src/test/: attribute_extractor.rs  mod.rs  test_constants.rs  test_defaults.rs  test_instantiate.rs
src/types/: denom.rs  error.rs  mod.rs  msg.rs
src/util/: conversion_utils.rs  mod.rs  provenance_utils.rs  self_validating.rs  validation_utils.rs
(+97 files in other folders)
