[package]
name = "funding-trading-bridge-smart-contract"
version = "0.0.4"
authors = ["Jake Schwartz <jschwartz@figure.com>"]
edition = "2021"

exclude = [
    "funding_trading_bridge_smart_contract",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "=1.4.1", default-features = false }
cw-storage-plus = "=1.1.0"
provwasm-std = "=2.0.0"
result-extensions = "=1.0.2"
schemars = "=0.8.15"
semver = "=1.0.16"
serde = { version = "=1.0.190", default-features = false, features = ["derive"] }
thiserror = "=1.0.50"
prost = { version = "=0.11.9", default-features = false }

[dev-dependencies]
cosmwasm-schema = "=1.4.1"
provwasm-mocks = "=2.0.0"
