[package]
name = "funding-trading-bridge-smart-contract"
version = "1.0.2"
authors = ["Jake Schwartz <jschwartz@figure.com>"]
edition = "2021"

exclude = [
    "funding_trading_bridge_smart_contract",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "=2.1.0", default-features = false }
cw-storage-plus = "=2.0.0"
provwasm-std = { git = "https://github.com/provenance-io/provwasm", tag = "v2.3.0-rc1" }
result-extensions = "=1.0.2"
schemars = "=0.8.21"
semver = "=1.0.16"
serde = { version = "=1.0.204", default-features = false, features = ["derive"] }
thiserror = "=1.0.50"
prost = { version = "=0.11.9", default-features = false }
uuid = "1.10.0"

[dev-dependencies]
cosmwasm-schema = "=2.1.0"
provwasm-mocks = { git = "https://github.com/provenance-io/provwasm", tag = "v2.3.0-rc1" }
